--- a/BioCro/DARPA/Gs_sensitivity.Rmd
+++ b/BioCro/DARPA/Gs_sensitivity.Rmd
@@ -14,8 +14,10 @@ Here, we wrote a function 'BioCro_restart()' which runs BioCro in 3 pieces: 1) o
 library(BioCro)
 library(PEcAn.BIOCRO)
 library(dplyr)
+library(udunits2)
 library(ggplot2)
 library(cowplot)
+library(RColorBrewer)
 source("Gs_sensitivity_inputs/BioCro_restart.R")
 ```
 
@@ -26,9 +28,10 @@ loc.coords <- data.frame(site = c("St. Louis, MO", "Pueblo, CO"),
                          lat = c(38.625, 38.375), 
                          lon = c(-90.125, -104.625))
 
-duration <- 1:21
+duration <- 0:11
 
 output.list <- list()
+controls.list <- list()
 for(loc in 1:nrow(loc.coords)) {
   # Add met data
   biocro_met_path <- paste0("/data/dbfiles/biocro_met/stlew-",
@@ -60,35 +63,71 @@ for(loc in 1:nrow(loc.coords)) {
     mutate(location = loc.coords$site[loc]) %>%
     relocate(location)
   
-  # Add instance of no reduction in gs parameters
-  control <- BioGro(met, day1 = 1, dayn = 100,
-                    soilControl = l2n(config$pft$soilControl),
-                    canopyControl = l2n(config$pft$canopyControl),
-                    phenoControl = l2n(config$pft$phenoParms),
-                    seneControl = l2n(config$pft$seneControl),
-                    photoControl = l2n(config$pft$photoParms))
-  temp <- do.call(cbind.data.frame, control[ind]) %>%
-      mutate(duration = 0,
-             location = loc.coords$site[loc]) %>%
-      relocate(location, duration)
-  output.list[[loc]] <- rbind.data.frame(temp, output.list[[loc]])
+  # Run control using BioGro directly
+  controls <- BioCro::BioGro(met, day1 = 1, dayn = 100,
+                             soilControl = l2n(config$pft$soilControl),
+                             canopyControl = l2n(config$pft$canopyControl),
+                             phenoControl = l2n(config$pft$phenoParms),
+                             seneControl = l2n(config$pft$seneControl),
+                             photoControl = l2n(config$pft$photoParms))
+  ind <- as.vector(which(lapply(controls, length) == (24*100)))
+  controls.list[[loc]] <- do.call(cbind.data.frame, controls[ind]) %>%
+    mutate(location = loc.coords$site[loc]) %>%
+    relocate(location)
   
   print(paste0("Finished with ", loc.coords$site[loc]))
 }
-  
-output.df <- do.call(rbind.data.frame, output.list) %>%
-  mutate(total_biomass = Leaf + Stem + Root,
-         transpiration = CanopyTrans) %>%
-  group_by(location, duration, DayofYear) %>%
-  summarize(dailyBiomass = mean(total_biomass),
-            dailyT = sum(transpiration)) %>%
+
+control.df <- do.call(rbind.data.frame, controls.list) %>%
+  mutate(biomass_kg_m2 = ud.convert(Leaf + Stem + Root, "Mg/ha", "kg/m2"),
+         stem_kg_m2 = ud.convert(Stem, "Mg/ha", "kg/m2"),
+         leaf_kg_m2 = ud.convert(Leaf, "Mg/ha", "kg/m2"),
+         root_kg_m2 = ud.convert(Root, "Mg/ha", "kg/m2"),
+         SLA_m2_kg = LAI / leaf_kg_m2,
+         trans_kg_m2_hr = ud.convert(CanopyTrans, "Mg/ha/hr", "kg/m2/hr") * LAI,
+         npp_kg_m2_hr = ud.convert(CanopyAssim, "Mg/ha/hr", "g/m2/hr") * LAI,
+         T.ET = CanopyTrans / (CanopyTrans + SoilEvaporation),
+         wue = (CanopyAssim * 1000) / CanopyTrans) %>%
+  group_by(location, DayofYear) %>%
+  summarize(dailyBiomass = mean(biomass_kg_m2),
+            dailyT = sum(trans_kg_m2_hr),
+            dailyNPP = sum(npp_kg_m2_hr),
+            LAI = mean(LAI),
+            dailyStem = mean(stem_kg_m2),
+            dailyLeaf = mean(leaf_kg_m2),
+            dailyRoot = mean(root_kg_m2),
+            SLA = mean(SLA_m2_kg),
+            TET = mean(T.ET),
+            WUE = mean(wue)) %>%
   mutate(Date = seq(as.Date("2010-06-01"), as.Date("2010-09-08"), by = "day"))
 ```
 
-The output is now a single dataframe object, hour timeseries for 100 days across 2 locations and 21 durations, plus a control instance of no change in parameters. 
+Collate output and calculate daily means/sums of biomass and transpiration. CanopyTrans is per unit ground area, so multiply by LAI for transpiration per unit leaf area. The output is now a single dataframe object, hourly timeseries for 100 days across 2 locations and 11 durations, plus the control instance of no change in parameters. 
 
-One way to visualize this is biomass at the end of 100 days as a proportion of the control. 
 ```{r}
+output.df <- do.call(rbind.data.frame, output.list) %>%
+  mutate(biomass_kg_m2 = ud.convert(Leaf + Stem + Root, "Mg/ha", "kg/m2"),
+         stem_kg_m2 = ud.convert(Stem, "Mg/ha", "kg/m2"),
+         leaf_kg_m2 = ud.convert(Leaf, "Mg/ha", "kg/m2"),
+         root_kg_m2 = ud.convert(Root, "Mg/ha", "kg/m2"),
+         SLA_m2_kg = LAI / leaf_kg_m2,
+         trans_kg_m2_hr = ud.convert(CanopyTrans, "Mg/ha/hr", "kg/m2/hr") * LAI,
+         npp_kg_m2_hr = ud.convert(CanopyAssim, "Mg/ha/hr", "g/m2/hr"),
+         T.ET = CanopyTrans / (CanopyTrans + SoilEvaporation),
+         wue = (CanopyAssim * 1000) / CanopyTrans) %>%
+  group_by(location, duration, DayofYear) %>%
+  summarize(dailyBiomass = mean(biomass_kg_m2),
+            dailyT = sum(trans_kg_m2_hr),
+            dailyNPP = sum(npp_kg_m2_hr),
+            LAI = mean(LAI),
+            dailyStem = mean(stem_kg_m2),
+            dailyLeaf = mean(leaf_kg_m2),
+            dailyRoot = mean(root_kg_m2),
+            SLA = mean(SLA_m2_kg),
+            TET = mean(T.ET),
+            WUE = mean(wue)) %>%
+  mutate(Date = seq(as.Date("2010-06-01"), as.Date("2010-09-08"), by = "day"))
+
 control <- output.df %>%
   ungroup() %>%
   filter(duration == 0) %>%
@@ -100,23 +139,15 @@ biomass_comp <- left_join(output.df %>% filter(duration != 0), control,
                           by = c("location", "DayofYear")) %>%
   mutate(biomassProp = dailyBiomass / controlBiomass,
          tProp = dailyT / controlT)
+biomass_comp$Duration <- factor(biomass_comp$duration, levels = 0:11)
+```
 
-ggplot() +
-  geom_point(data = control, aes(x = DayofYear, y = controlT, color = "control")) +
-  geom_point(data = output.df[output.df$duration == 1,], 
-             aes(x = DayofYear, y = dailyT, color = "reduced")) +
-  facet_wrap(~location)
-
-ggplot() +
-  geom_point(data = control, aes(x = DayofYear, y = controlBiomass, color = "control")) +
-  geom_point(data = output.df[output.df$duration == 1,], 
-             aes(x = DayofYear, y = dailyBiomass, color = "reduced")) +
-  facet_wrap(~location)
-
+One way to visualize this is biomass at the end of 100 days as a proportion of the control. 
+```{r}
 fig_biomass <- ggplot(biomass_comp, aes(x = Date)) +
   geom_tile(aes(y = duration, fill = biomassProp)) +
   facet_wrap(~location) +
-  scale_fill_gradient2(low = "goldenrod", mid = "lightgray", 
+  scale_fill_gradient2(low = "goldenrod", mid = "white", 
                        high = "forestgreen", midpoint = 1) +
   scale_y_continuous("Days reduced") +
   theme_cowplot() +
@@ -129,7 +160,7 @@ fig_biomass <- ggplot(biomass_comp, aes(x = Date)) +
 fig_trans <- ggplot(biomass_comp, aes(x = Date)) +
   geom_tile(aes(y = duration, fill = tProp)) +
   facet_wrap(~location) +
-  scale_fill_gradient2(low = "pink", mid = "lightgray", 
+  scale_fill_gradient2(low = "pink", mid = "white", 
                        high = "blueviolet", midpoint = 1) +
   scale_y_continuous("Days reduced") +
   theme_cowplot() +
@@ -140,4 +171,153 @@ fig_trans <- ggplot(biomass_comp, aes(x = Date)) +
   labs(title = "Transpiration proportion")
 
 plot_grid(fig_biomass, fig_trans, ncol = 1)
+```
+
+
+Another way to visualize is as a set of timeseries in different colors. 
+```{r}
+cols <- brewer.pal(11, "Spectral")
+fig_b_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyBiomass, color = Duration)) +
+    geom_point(data = output.df[output.df$duration == 0,], 
+               aes(x = Date, y = dailyBiomass),
+               color = "black") +
+  scale_y_continuous(expression(paste("Biomass (kg ", m^-2, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+fig_l_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = LAI, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = LAI),
+             color = "black") +
+  scale_y_continuous("LAI") +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot()+
+  guides(color = FALSE)
+
+fig_t_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyT, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyT),
+             color = "black") +
+  scale_y_continuous(expression(paste("T (kg ", m^-2, " ", day^-1, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+plot_grid(fig_b_ts, fig_l_ts, fig_t_ts, ncol = 1)
+```
+
+Visualize biomass broken down by leaf, stem, and root compartments, as well as SLA. 
+
+```{r}
+fig_leaf_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyLeaf, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyLeaf),
+             color = "black") +
+  scale_y_continuous(expression(paste("Leaf (kg ", m^-2, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+fig_stem_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyStem, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyStem),
+             color = "black") +
+  scale_y_continuous(expression(paste("Stem (kg ", m^-2, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+fig_root_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyRoot, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyRoot),
+             color = "black") +
+  scale_y_continuous(expression(paste("Root (kg ", m^-2, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+plot_grid(fig_leaf_ts, fig_stem_ts, fig_root_ts, ncol = 1)
+```
+
+Visualize daily NPP and ratios WUE and T:ET over time. 
+```{r}
+fig_npp_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = dailyNPP, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyNPP),
+             color = "black") +
+  scale_y_continuous(expression(paste("NPP (g ", m^-2, " ", day^-1, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+fig_wue_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = WUE, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = WUE),
+             color = "black") +
+  scale_y_continuous(expression(paste("WUE (g ", kg^-1, ")"))) +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+fig_tet_ts <- ggplot() +
+  geom_point(data = biomass_comp, 
+             aes(x = Date, y = TET, color = Duration)) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = TET),
+             color = "black") +
+  scale_y_continuous("T/ET") +
+  scale_color_manual(values = cols) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot() +
+  guides(color = FALSE)
+
+plot_grid(fig_npp_ts, fig_wue_ts, fig_tet_ts, ncol = 1)
+```
+
+Control with BioGro vs control with BioCro_restart.R
+```{r}
+ggplot() +
+  geom_point(data = control.df, 
+             aes(x = Date, y = dailyNPP, color = "BioGro")) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = dailyNPP, color = "restart")) +
+  scale_y_continuous(expression(paste("NPP (g ", m^-2, " ", day^-1, ")"))) +
+  scale_color_manual(values = c("forestgreen", "darkseagreen")) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot()
+
+ggplot() +
+  geom_point(data = control.df, 
+             aes(x = Date, y = WUE, color = "BioGro")) +
+  geom_point(data = output.df[output.df$duration == 0,], 
+             aes(x = Date, y = WUE, color = "restart")) +
+  scale_y_continuous(expression(paste("WUE (g ", kg^-1, ")"))) +
+  scale_color_manual(values = c("forestgreen", "darkseagreen")) +
+  facet_wrap(~location, scale = "free_y")+
+  theme_cowplot()
 ```
